--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
 /* header */
 nav {
     background: -webkit-radial-gradient(#217A5C, #051d12) !important;
-    background: -moz-radial-gradient(#217A5C, #051d12) !important;  
-    /* background: linear-gradient(to bottom, #07291a, #0e5033, #07291a );  */
+    background: -moz-radial-gradient(#217A5C, #051d12) !important;
 }
 
 .imagen-header {
@@ -16,12 +16,12 @@ nav {
 
 .nav-link {
     color: white !important;
-}  
+}
 
 .nav-link:hover {
     color: #ffbb33 !important;
     transition: 1s;
-} 
+}
 
 .menu {
     display: flex;
@@ -33,7 +33,7 @@ nav {
 }
 
 .bandera-menu:hover {
-    transform: scale(1.3)!important;
+    transform: scale(1.3) !important;
     transition: 1s;
     border-radius: 3px;
 }
@@ -57,11 +57,11 @@ nav {
     border-top: 10px solid white;
 }
 
-.linea-container{
+.linea-container {
     border-top: 10px solid #ffbb33;
 }
 
-.linea-naranja{
+.linea-naranja {
     border-top: 10px solid #f97e2b;
 }
 
@@ -75,28 +75,15 @@ nav {
     filter: drop-shadow(0 0 0.5rem black);
 }
 
-/* .parrafo-video{
-    font-size: 35px;
-    position: relative;
-    bottom: 250px;
-    display: flex !important;
-    justify-content: center;
-    padding: 0px 350px;
-    filter: drop-shadow(0 0 0.5rem black);
-    font-family: 'Nanum Myeongjo', serif;
-}  */
-
 /* seccion about us */
 
 .aboutus-container {
-/*     background: linear-gradient(to bottom, #07291a, #217A5C );  */
-/*     background-color: #217A5C;  */
-    background: rgb(2,0,36);
-    background: linear-gradient(337deg, rgba(2,0,36,1) 0%, #07291a 41%, #217A5C 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(337deg, rgba(2, 0, 36, 1) 0%, #07291a 41%, #217A5C 100%);
     padding: 100px 550px;
 }
 
-.titulo-aboutus{
+.titulo-aboutus {
     display: flex;
     justify-content: center;
     font-size: 100px;
@@ -112,9 +99,10 @@ nav {
     font-size: 25px;
     color: white;
     font-family: 'Nanum Myeongjo', serif;
+    filter: drop-shadow(0 0 0.5rem black);
 }
 
-.subtitulo-aboutus{
+.subtitulo-aboutus {
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -125,17 +113,31 @@ nav {
 /* seccion que hacemos */
 
 .quehacemos {
-/*     background: linear-gradient(to bottom, #217A5C, #051d12  ); */ 
-/*     background: rgb(2,0,36);
-    background: linear-gradient(200deg,white  0%, #217A5C 41%, rgba(2,0,36,1) 100%); */
-/*     background-color: white; */
     background: url(https://www.ondoan.com/img/2020/02/santurtzi-web.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: top;
-    background-size: cover;
+    background-size: cover; 
     padding: 100px 550px;
 }
+
+.box {
+    background-color: rgba(161, 161, 161, 0.3);
+    border-radius: 5px;
+    text-align: center;
+    line-height: 1;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 20px 20px;
+}
+.container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
+
 
 /* sustentabilidad */
 
@@ -146,8 +148,8 @@ nav {
 /* seccion mapa */
 
 .mapa {
-    background: rgb(2,0,36);
-    background: linear-gradient(200deg,white  0%, #217A5C 41%, rgba(2,0,36,1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(200deg, white 0%, #217A5C 41%, rgba(2, 0, 36, 1) 100%);
     padding: 100px 550px;
 }
 
@@ -184,13 +186,14 @@ nav {
 }
 
 .floating-buttons a:hover {
-    color:#217A5C !important;
+    color: #217A5C !important;
     transition: 1s;
 }
 
 .card {
     color: white;
     background-color: #ffbb33 !important;
+    filter: drop-shadow(0 0 0.5rem black);
 }
 
 .card-title {
@@ -199,23 +202,16 @@ nav {
 }
 
 .card:hover {
-    transform: scale(1.1)!important;
+    transform: scale(1.1) !important;
     transition: 1s;
     border-radius: 10px;
 }
 
-video { 
+video {
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
     z-index: -1;
-     transform: translateX(-50%) translateY(-50%);
-/*     background-image: url(//s3-us-west-2.amazonaws.com/s.cdpn.io/68939/wppost.jpg);
-    background-size:cover;
-    background-position: center;  */
+    transform: translateX(-50%) translateY(-50%);
 }
-
-
-
-
