--- a/css/style.css
+++ b/css/style.css
@@ -1,194 +1,257 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* header */
-nav {
-    background: -webkit-radial-gradient(#217A5C, #051d12) !important;
-    background: -moz-radial-gradient(#217A5C, #051d12) !important;
-}
-
-.imagen-header {
-    position: relative;
-    left: 250px;
-}
-
-.nav-link {
-    color: white !important;
-}
-
-.nav-link:hover {
-    color: #ffbb33 !important;
-    transition: 1s;
-}
-
-.menu-principal {
-    margin: 15px;
-}
-
-.menu {
-    display: flex;
-    text-align: right !important;
-    font-size: 25px;
-    position: relative;
-    right: 300px;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-.bandera-menu:hover {
-    transform: scale(1.3) !important;
-    transition: 1s;
-    border-radius: 3px;
-}
-
-.login {
-    position: relative;
-    left: -80px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* lineas */
-
 .linea-verdeoscuro {
-    border-top: 10px solid #07291a;
+  border-top: 10px solid #07291a;
 }
 
 .linea {
-    border-top: 10px solid #217A5C;
+  border-top: 10px solid #217a5c;
 }
 
 .linea-blanco {
-    border-top: 10px solid white;
+  border-top: 10px solid #fff;
 }
 
 .linea-container {
-    border-top: 10px solid #ffbb33;
+  border-top: 10px solid #ffbb33;
 }
 
 .linea-naranja {
-    border-top: 10px solid #f97e2b;
+  border-top: 10px solid #f97e2b;
 }
 
-/* seccion imagenes */
+/* MOBILE STYLES */
+@media only screen and (max-width: 450px) {
+  /* HEADER */
+  .imagen-header {
+    text-align: left !important;
+    height: 60px !important;
+    position: static !important;
+  }
 
-.titulo-video {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 70px;
-    position: relative;
-    bottom: 280px;
+  .navbar-toggler {
+    background-color: #ffbb33 !important;
+    border-radius: 20px !important;
+    text-align: left !important;
+  }
+  .navbar-toggler .navbar-toggler-icon {
+    font-size: 15px !important;
+    color: #217a5c;
+    text-align: left !important;
+  }
+
+  .nav-link {
+    color: #fff !important;
+  }
+
+  .nav-link:hover {
+    color: #ffbb33 !important;
+    transition: 1s;
+  }
+
+  .navbar-nav {
+    display: flex !important;
+    justify-content: center !important;
+  }
+
+  .menu-principal {
+    margin: 0px !important;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: center !important;
+    font-size: 18px !important;
+    position: static !important;
+    font-family: "Titillium Web", sans-serif;
+  }
+
+  .bandera-menu:hover {
+    transform: scale(1.3) !important;
+    transition: 1s;
+    border-radius: 3px;
+  }
+
+  .login {
+    position: static;
+  }
+
+  /* CARPOUSEL */
+  .img-carousel {
+    height: 300px;
+  }
+
+  .titulo-carousel {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 25px !important;
+    position: relative !important;
+    bottom: 50px !important;
     filter: drop-shadow(0 0 0.5rem black);
+  }
+}
+/* header */
+nav {
+  background: -webkit-radial-gradient(#217a5c, #051d12) !important;
+  background: -moz-radial-gradient(#217a5c, #051d12) !important;
+}
+
+.imagen-header {
+  position: relative;
+  left: 250px;
+}
+
+.nav-link {
+  color: #fff !important;
+}
+
+.nav-link:hover {
+  color: #ffbb33 !important;
+  transition: 1s;
+}
+
+.menu-principal {
+  margin: 15px;
+}
+
+.menu {
+  display: flex;
+  text-align: right !important;
+  font-size: 25px;
+  position: relative;
+  right: 300px;
+  font-family: "Titillium Web", sans-serif;
+}
+
+.bandera-menu:hover {
+  transform: scale(1.3) !important;
+  transition: 1s;
+  border-radius: 3px;
+}
+
+.login {
+  position: relative;
+  left: -80px;
+}
+
+.titulo-carousel {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 70px;
+  position: relative;
+  bottom: 280px;
+  filter: drop-shadow(0 0 0.5rem black);
 }
 
 /* seccion cards */
-
 .card-container {
-    background-color: white;
-    padding: 50px 510px !important;
+  background-color: white;
+  padding: 50px 510px !important;
 }
 
 .card {
-    color: white;
-    filter: drop-shadow(0 0 0.5rem black);
-    padding: 50px;
-    border-radius: 15px !important;
+  color: white;
+  filter: drop-shadow(0 0 0.5rem black);
+  padding: 50px;
+  border-radius: 15px !important;
 }
 
 .card-imagen1 {
-    background: url(https://i.ibb.co/TbSJn4v/maiz1.jpg);
-    background-size: 450px;
+  background: url(https://i.ibb.co/TbSJn4v/maiz1.jpg);
+  background-size: 450px;
 }
 
 .card-imagen2 {
-    background: url(https://i.ibb.co/ySHgLym/SOJA1.jpg);
-    background-size: 450px;
+  background: url(https://i.ibb.co/ySHgLym/SOJA1.jpg);
+  background-size: 450px;
 }
 
 .card-imagen3 {
-    background: url(https://i.ibb.co/2csdjqn/CEBADA1.jpg);
-    background-size: 450px;
+  background: url(https://i.ibb.co/2csdjqn/CEBADA1.jpg);
+  background-size: 450px;
 }
 
 .card-imagen4 {
-    background: url(https://i.ibb.co/yFshqJV/HARINA1.jpg);
-    background-size: 430px;  
+  background: url(https://i.ibb.co/yFshqJV/HARINA1.jpg);
+  background-size: 430px;
 }
 
 .card-title {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 40px;
-    padding-bottom: 10px;
-    filter: drop-shadow(0 0 0.5rem black);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  font-family: "Titillium Web", sans-serif;
+  font-size: 40px;
+  padding-bottom: 10px;
+  filter: drop-shadow(0 0 0.5rem black);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .card-text {
-    font-size: 20px;
-    font-family: 'Titillium Web', sans-serif;
-    position: relative;
-    top: 15px;
-    text-align: center !important;
+  font-size: 20px;
+  font-family: "Titillium Web", sans-serif;
+  position: relative;
+  top: 15px;
+  text-align: center !important;
 }
 
 .imagen-container {
-    position: relative !important;
-    display: inline-block !important;
-    text-align: center !important;
+  position: relative !important;
+  display: inline-block !important;
+  text-align: center !important;
 }
 
 .imagen-productos {
-    border-bottom-left-radius: 30px;
-    border-top-right-radius: 30px !important;
+  border-bottom-left-radius: 30px;
+  border-top-right-radius: 30px !important;
 }
 
 /* seccion about us */
-
 .aboutus-container {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(337deg, rgba(2, 0, 36, 1) 0%, #07291a 41%, #217A5C 100%);
-    padding: 100px 550px;
+  background: #020024;
+  background: linear-gradient(337deg, #020024 0%, #07291a 41%, #217A5C 100%);
+  padding: 100px 550px;
 }
 
 .titulo-aboutus {
-    display: flex;
-    justify-content: center;
-    font-size: 100px;
-    padding-bottom: 25px;
-    font-family: 'Titillium Web', sans-serif;
-    color: white;
-    filter: drop-shadow(0 0 0.5rem black);
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
+  padding-bottom: 25px;
+  font-family: "Titillium Web", sans-serif;
+  color: white;
+  filter: drop-shadow(0 0 0.5rem black);
 }
 
 .parrafo-aboutus {
-    display: flex;
-    justify-content: center !important;
-    text-align: center;
-    font-size: 25px;
-    color: white;
-    font-family: 'Titillium Web', sans-serif;
-    filter: drop-shadow(0 0 0.5rem black);
+  display: flex;
+  justify-content: center !important;
+  text-align: center;
+  font-size: 25px;
+  color: white;
+  font-family: "Titillium Web", sans-serif;
+  filter: drop-shadow(0 0 0.5rem black);
 }
 
 .subtitulo-aboutus {
-    display: flex;
-    justify-content: center;
-    font-size: 50px;
-    font-family: 'Titillium Web', sans-serif;
-    color: #ffbb33;
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  font-family: "Titillium Web", sans-serif;
+  color: #ffbb33;
 }
 
 /* seccion que hacemos */
-
 .quehacemos {
-    background: url(https://cdn.discordapp.com/attachments/880523057557569609/883047132150509578/portcod.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover; 
-    padding: 100px 550px;
+  background: url(https://cdn.discordapp.com/attachments/880523057557569609/883047132150509578/portcod.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  padding: 100px 550px;
 }
 
 /* .box1 {
@@ -199,70 +262,71 @@ nav {
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(2px);
     padding: 25px 25px; 
-}  */ 
-
-
+}  */
 .container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-} 
-
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
 
 /* sustentabilidad */
-
 .sustentabilidad {
-    padding: 100px 550px;
+  padding: 100px 550px;
 }
 
 /* seccion mapa */
-
 .mapa {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(200deg, white 0%, #217A5C 41%, rgba(2, 0, 36, 1) 100%);
-    padding: 100px 550px;
+  background: #020024;
+  background: linear-gradient(200deg, white 0%, #217A5C 41%, #020024 100%);
+  padding: 100px 550px;
 }
 
-/* logo sticky */
-
+/* botones sticky */
 .floating-buttons {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    z-index: 4;
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 4;
 }
 
 .floating-buttons ul {
-    list-style: none !important;
+  list-style: none !important;
 }
 
 .floating-buttons li {
-    display: block;
-    margin-bottom: 10px !important;
+  display: block;
+  margin-bottom: 10px !important;
 }
 
 .floating-buttons a {
-    background-color: #ffbb33;
-    display: block !important;
-    padding: 8px 10px !important;
-    text-align: center;
-    color: white;
-    border-radius: 6px;
-    filter: drop-shadow(0 0 0.5rem black) !important;
-    text-decoration: none !important;
+  background-color: #ffbb33;
+  display: block !important;
+  padding: 8px 10px !important;
+  text-align: center;
+  color: white;
+  border-radius: 6px;
+  filter: drop-shadow(0 0 0.5rem black) !important;
+  text-decoration: none !important;
 }
 
 .floating-buttons a:hover {
-    color: #217A5C !important;
-    transition: 1s;
+  color: #217A5C !important;
+  transition: 1s;
 }
 
-
+/* seccion imagenes */
+.titulo-video {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 70px;
+  position: relative;
+  bottom: 280px;
+  filter: drop-shadow(0 0 0.5rem black);
+}
 
 /* video {
     min-width: 100%;
@@ -272,5 +336,6 @@ nav {
     z-index: -1;
     transform: translateX(-50%) translateY(-50%);
 } */
-
 /* https://i.ibb.co/PWhs9RZ/heap-of-pearl-barley-grains-vegetarian-food-2-min.jpg */
+
+/*# sourceMappingURL=style.css.map */
