--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,11 @@
     position: static;
   }
 
+  .banderas-mobile {
+    position: relative;
+    right: 10px !important;
+  }
+
   /* CARPOUSEL */
   .img-carousel {
     height: 300px;
@@ -90,8 +95,134 @@
     font-family: "Titillium Web", sans-serif;
     font-size: 25px !important;
     position: relative !important;
-    bottom: 50px !important;
+    bottom: 45px !important;
     filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  /* CARDS */
+  .card-container {
+    background-color: white;
+    padding: 10px 100px !important;
+  }
+
+  .card {
+    color: white;
+    filter: drop-shadow(0 0 0.5rem black);
+    border-radius: 15px !important;
+  }
+
+  .card-imagen1 {
+    background: url(https://i.ibb.co/TbSJn4v/maiz1.jpg);
+    background-size: 100px;
+  }
+
+  .card-imagen2 {
+    background: url(https://i.ibb.co/ySHgLym/SOJA1.jpg);
+    background-size: 100px;
+  }
+
+  .card-imagen3 {
+    background: url(https://i.ibb.co/2csdjqn/CEBADA1.jpg);
+    background-size: 100px;
+  }
+
+  .card-imagen4 {
+    background: url(https://i.ibb.co/yFshqJV/HARINA1.jpg);
+    background-size: 100px;
+  }
+
+  .card-title {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 40px;
+    padding-top: 25px !important;
+    filter: drop-shadow(0 0 0.5rem black);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .card-text {
+    font-size: 18px !important;
+    font-family: "Titillium Web", sans-serif;
+    position: relative;
+    top: 15px;
+    text-align: center !important;
+  }
+
+  .imagen-container {
+    position: relative !important;
+    display: inline-block !important;
+    text-align: center !important;
+  }
+
+  .imagen-productos {
+    border-bottom-left-radius: 30px;
+    border-top-right-radius: 30px !important;
+  }
+
+  /* ABOUT US */
+  .aboutus-container {
+    background: #020024;
+    background: linear-gradient(337deg, #020024 0%, #07291a 41%, #217A5C 100%);
+    padding: 0 20px !important;
+    text-align: center !important;
+  }
+
+  .titulo-aboutus {
+    display: flex;
+    justify-content: center;
+    font-size: 40px !important;
+    padding-bottom: 25px;
+    font-family: "Titillium Web", sans-serif;
+    color: white;
+    filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  .parrafo-aboutus {
+    display: flex;
+    justify-content: center !important;
+    text-align: center;
+    font-size: 15px !important;
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  .subtitulo-aboutus {
+    display: flex;
+    justify-content: center;
+    font-size: 25px !important;
+    font-family: "Titillium Web", sans-serif;
+    color: #ffbb33;
+    margin-bottom: -1px !important;
+  }
+
+  /* QUE HACEMOS */
+  .quehacemos {
+    background: url(https://cdn.discordapp.com/attachments/880523057557569609/883047132150509578/portcod.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    padding: 20px 20px !important;
+  }
+
+  /* .box1 {
+      background-color: rgba(161, 161, 161, 0.3);
+      border-radius: 5px; 
+      text-align: center; 
+      line-height: 1; 
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      padding: 25px 25px; 
+  }  */
+  .container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
   }
 }
 /* header */
@@ -147,15 +278,10 @@ nav {
 }
 
 /* seccion cards */
-.card-container {
-  background-color: white;
-  padding: 50px 510px !important;
-}
-
 .card {
   color: white;
   filter: drop-shadow(0 0 0.5rem black);
-  padding: 50px;
+  padding: 30px;
   border-radius: 15px !important;
 }
 
@@ -320,14 +446,6 @@ nav {
 }
 
 /* seccion imagenes */
-.titulo-video {
-  font-family: "Titillium Web", sans-serif;
-  font-size: 70px;
-  position: relative;
-  bottom: 280px;
-  filter: drop-shadow(0 0 0.5rem black);
-}
-
 /* video {
     min-width: 100%;
     min-height: 100%;
