agrego el footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 @import "components/sustentabilidad";
 @import "components/map";
 @import "components/sticky-buttons";
+@import "components/footer";
 
 
 /* seccion imagenes */
