--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,196 @@
     width: 100%;
   }
 }
+/* FIN MOBILE STYLES */
+/* //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+/* MACBOOK 13" STYLES */
+@media only screen and (min-width: 1000px) and (max-width: 1700px) {
+  /* HEADER */
+  .imagen-header {
+    text-align: left !important;
+    height: 120px !important;
+    position: static !important;
+    padding-left: 100px;
+  }
+
+  .nav-link {
+    color: #fff !important;
+  }
+
+  .nav-link:hover {
+    color: #ffbb33 !important;
+    transition: 1s;
+  }
+
+  .navbar-nav {
+    display: flex !important;
+    justify-content: center !important;
+  }
+
+  .menu-principal {
+    margin: 0px !important;
+  }
+
+  .menu {
+    display: flex;
+    justify-content: center !important;
+    font-size: 20px !important;
+    position: static !important;
+    font-family: "Titillium Web", sans-serif;
+  }
+
+  .bandera-menu:hover {
+    transform: scale(1.3) !important;
+    transition: 1s;
+    border-radius: 3px;
+  }
+
+  .login {
+    position: static;
+  }
+
+  .banderas-mobile {
+    position: relative;
+    right: 10px !important;
+  }
+
+  /* CAROUSEL */
+  .img-carousel {
+    height: 650px;
+  }
+
+  .titulo-carousel {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 70px;
+    position: relative;
+    bottom: 150px !important;
+    filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  /* CARDS */
+  .card {
+    color: white;
+    filter: drop-shadow(0 0 0.5rem black);
+    padding: 50px 10px !important;
+    border-radius: 15px !important;
+    width: 80%;
+    margin: 0 auto !important;
+  }
+
+  .card-imagen1 {
+    background: url(https://i.ibb.co/TbSJn4v/maiz1.jpg);
+    background-size: 650px !important;
+  }
+
+  .card-imagen2 {
+    background: url(https://i.ibb.co/ySHgLym/SOJA1.jpg);
+    background-size: 650px !important;
+  }
+
+  .card-imagen3 {
+    background: url(https://i.ibb.co/2csdjqn/CEBADA1.jpg);
+    background-size: 650px !important;
+  }
+
+  .card-imagen4 {
+    background: url(https://i.ibb.co/yFshqJV/HARINA1.jpg);
+    background-size: 630px !important;
+  }
+
+  .card-title {
+    font-family: "Titillium Web", sans-serif;
+    font-size: 40px;
+    padding-bottom: 10px;
+    filter: drop-shadow(0 0 0.5rem black);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .card-text {
+    font-size: 20px;
+    font-family: "Titillium Web", sans-serif;
+    position: relative;
+    top: 15px;
+    text-align: center !important;
+  }
+
+  .imagen-container {
+    position: relative !important;
+    display: inline-block !important;
+    text-align: center !important;
+  }
+
+  .imagen-productos {
+    border-bottom-left-radius: 30px;
+    border-top-right-radius: 30px !important;
+  }
+
+  /* ABOUT US */
+  .aboutus-container {
+    background: #020024;
+    background: linear-gradient(337deg, #020024 0%, #07291a 41%, #217A5C 100%);
+    padding: 100px 200px !important;
+    text-align: center !important;
+  }
+
+  .titulo-aboutus {
+    display: flex;
+    justify-content: center;
+    font-size: 60px !important;
+    padding-bottom: 25px;
+    font-family: "Titillium Web", sans-serif;
+    color: white;
+    filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  .parrafo-aboutus {
+    display: flex;
+    justify-content: center !important;
+    text-align: center;
+    font-size: 22px !important;
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    filter: drop-shadow(0 0 0.5rem black);
+  }
+
+  .subtitulo-aboutus {
+    display: flex;
+    justify-content: center;
+    font-size: 45px !important;
+    font-family: "Titillium Web", sans-serif;
+    color: #ffbb33;
+    margin-bottom: -1px !important;
+  }
+
+  /* QUE HACEMOS */
+  .quehacemos {
+    background: url(https://cdn.discordapp.com/attachments/880523057557569609/883047132150509578/portcod.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    padding: 100px 180px !important;
+  }
+
+  /* .box1 {
+      background-color: rgba(161, 161, 161, 0.3);
+      border-radius: 5px; 
+      text-align: center; 
+      line-height: 1; 
+      backdrop-filter: blur(2px);
+      -webkit-backdrop-filter: blur(2px);
+      padding: 25px 25px; 
+  }  */
+  .container {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+}
 /* header */
 nav {
   background: -webkit-radial-gradient(#217a5c, #051d12) !important;
