agregue animaciones con jquery

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import "base/fonts.scss";
 @import "base/lineas.scss";
 @import "base/queries.scss";
+@import "components/spinner";
 @import "components/header";
 @import "components/carousel";
 @import "components/cards";
