--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,29 +18,10 @@
 @import "components/map";
 @import "components/sticky-buttons";
 @import "components/footer";
-
-
-/* seccion imagenes */
-
+@import "components/legales";
 
 
 
 
-
-
-
-
-
-
-
-
-/* video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-    transform: translateX(-50%) translateY(-50%);
-} */
 
 /* https://i.ibb.co/PWhs9RZ/heap-of-pearl-barley-grains-vegetarian-food-2-min.jpg */
