--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,10 +1,16 @@
 /* seccion cards */
-
 .card {
     color: white;
     filter: drop-shadow(0 0 0.5rem black);
     padding: 30px;
     border-radius: 15px !important;
+}
+
+.card-productos {
+    background: url(https://cdn.discordapp.com/attachments/880523057557569609/888235458667110430/vector_naranja_dos.png);
+    background-position: top;
+    background-size: cover; 
+    padding: 100px 150px;
 }
 
 .card-imagen1 {
@@ -24,7 +30,7 @@
 
 .card-imagen4 {
     background: url(https://i.ibb.co/yFshqJV/HARINA1.jpg);
-    background-size: 430px;  
+    background-size: 430px;
 }
 
 .card-title {
@@ -55,4 +61,169 @@
 .imagen-productos {
     border-bottom-left-radius: 30px;
     border-top-right-radius: 30px !important;
+}
+
+/* cards barcos */
+
+.seccion-barcos {
+    background: url(https://cdn.discordapp.com/attachments/880523057557569609/888148126454657085/barco1.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover; 
+    padding: 100px 150px;
+}
+
+.card-barcos {
+    display: flex !important;
+    display: inline-block !important;
+    flex-wrap: wrap !important;
+    filter: drop-shadow(0 0 0.5rem black);
+}
+
+.card-img-top {
+    filter: drop-shadow(0 0 0.5rem black);
+}
+
+.card-img-top:hover {
+    transform: scale(1.1);
+} 
+
+/* progress bar */
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2em;
+}
+
+.circular-progress {
+    &,
+    &:before,
+    &:after {
+        width: 12rem;
+        height: 12rem;
+        border-radius: 50%;
+    }
+
+    margin: auto;
+    position: relative;
+
+    &:before,
+    &:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        text-align: center;
+    }
+
+    &:before {
+        padding: .5em;
+        box-sizing: border-box;
+        font-size: 2rem;
+        line-height: 8rem;
+    }
+
+    &:after {
+        line-height: 6rem;
+        font-size: 2rem;
+    }
+}
+
+@function progress($percent) {
+    $deg: $percent/100 * 180;
+    @return #{$deg}deg;
+}
+
+@mixin circular-progress($percent, $skill, $color, $bgcolor) {
+    $progress: progress($percent);
+    transform: rotate($progress);
+    background: linear-gradient(0deg,
+            $color 50%,
+            rgba($color, .2) 50%);
+
+    &:before,
+    &:after {
+        color: $color;
+    }
+
+    &:before {
+        content: "#{$skill}";
+        background: $bgcolor content-box;
+        transform: rotate(-#{$progress});
+        text-transform: uppercase;
+    }
+
+    &:after {
+        content: "#{$percent}%";
+        background: linear-gradient(transparent 50%,
+                $bgcolor 50%,
+            );
+        transform: scale(1.1) rotate(-#{$progress});
+    }
+}
+
+.barco1 {
+    @include circular-progress(
+        15,
+        Barco 1,
+        $verde-oscuro,
+        #fff)
+}
+
+.barco2 {
+    @include circular-progress(
+        95,
+        Barco 2,
+        $naranja,
+        #fff)
+}
+
+.barco3 {
+    @include circular-progress(
+        50,
+        Barco 3,
+        $amarillo,
+        #fff)
+}
+
+/* boton cards barcos */
+.css-button-arrow--green {
+    min-width: 130px;
+    height: 40px;
+    color: #fff;
+    padding: 5px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    left: 30px;
+    display: inline-block;
+    outline: none;
+    overflow: hidden;
+    border-radius: 5px;
+    border: none;
+    background-color: $amarillo;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.css-button-arrow--green:hover {
+    border-radius: 5px;
+    padding-right: 24px;
+    padding-left: 8px;
+}
+
+.css-button-arrow--green:hover:after {
+    opacity: 1;
+    right: 10px;
+}
+
+.css-button-arrow--green:after {
+    content: "\00BB";
+    position: absolute;
+    opacity: 0;
+    font-size: 20px;
+    line-height: 40px;
+    top: 0;
+    right: -20px;
+    transition: 0.4s;
 }
