--- a/scss/components/_legales.scss
+++ b/scss/components/_legales.scss
@@ -17,3 +17,8 @@
 .modal-header {
     background-color: $verde-oscuro !important;
 }
+
+.color-font{
+    color: #000 !important;
+    filter: drop-shadow(0 0 0.8rem black)
+}
