--- a/css/style.css
+++ b/css/style.css
@@ -691,110 +691,102 @@ nav {
 }
 
 .card-barcos {
-  display: flex !important;
-  display: inline-block !important;
-  flex-wrap: wrap !important;
   filter: drop-shadow(0 0 0.5rem black);
 }
 
-.card-img-top {
-  filter: drop-shadow(0 0 0.5rem black);
+.titulo-barcos {
+  display: flex;
+  justify-content: center;
+  font-size: 50px;
+  font-family: "Titillium Web", sans-serif;
+  color: #ffbb33;
 }
 
-.card-img-top:hover {
-  transform: scale(1.1);
+.parrafo-barcos {
+  display: flex;
+  justify-content: center !important;
+  font-size: 25px;
+  font-family: "Titillium Web", sans-serif;
+  color: #ffbb33;
+}
+
+.subtitulo-barcos {
+  display: flex;
+  justify-content: center !important;
+  font-size: 55px;
+  font-family: "Titillium Web", sans-serif;
+  color: #217a5c;
 }
 
 /* progress bar */
-.skills {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2em;
-}
-
-.circular-progress {
-  margin: auto;
+.img-svg {
   position: relative;
-}
-.circular-progress, .circular-progress:before, .circular-progress:after {
-  width: 12rem;
-  height: 12rem;
-  border-radius: 50%;
-}
-.circular-progress:before, .circular-progress:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-align: center;
-}
-.circular-progress:before {
-  padding: 0.5em;
-  box-sizing: border-box;
-  font-size: 2rem;
-  line-height: 8rem;
-}
-.circular-progress:after {
-  line-height: 6rem;
-  font-size: 2rem;
+  right: 102px;
 }
 
-.barco1 {
-  transform: rotate(27deg);
-  background: linear-gradient(0deg, #217a5c 50%, rgba(33, 122, 92, 0.2) 50%);
-}
-.barco1:before, .barco1:after {
-  color: #217a5c;
-}
-.barco1:before {
-  content: "Barco 1";
-  background: #fff content-box;
-  transform: rotate(-27deg);
-  text-transform: uppercase;
-}
-.barco1:after {
-  content: "15%";
-  background: linear-gradient(transparent 50%, #fff 50%);
-  transform: scale(1.1) rotate(-27deg);
+/* barco 1 */
+.fill-1 {
+  animation: charge 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol 5s ease-in infinite;
 }
 
-.barco2 {
-  transform: rotate(171deg);
-  background: linear-gradient(0deg, #f97e2b 50%, rgba(249, 126, 43, 0.2) 50%);
+@keyframes charge {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(6.5);
+  }
 }
-.barco2:before, .barco2:after {
-  color: #f97e2b;
+@keyframes changeCol {
+  0%, 10% {
+    fill: #f97e2b;
+  }
+  10%, 100% {
+    fill: #217A5C;
+  }
 }
-.barco2:before {
-  content: "Barco 2";
-  background: #fff content-box;
-  transform: rotate(-171deg);
-  text-transform: uppercase;
-}
-.barco2:after {
-  content: "95%";
-  background: linear-gradient(transparent 50%, #fff 50%);
-  transform: scale(1.1) rotate(-171deg);
-}
-
-.barco3 {
-  transform: rotate(90deg);
-  background: linear-gradient(0deg, #ffbb33 50%, rgba(255, 187, 51, 0.2) 50%);
-}
-.barco3:before, .barco3:after {
-  color: #ffbb33;
-}
-.barco3:before {
-  content: "Barco 3";
-  background: #fff content-box;
-  transform: rotate(-90deg);
-  text-transform: uppercase;
-}
-.barco3:after {
-  content: "50%";
-  background: linear-gradient(transparent 50%, #fff 50%);
-  transform: scale(1.1) rotate(-90deg);
+/* barco 2 */
+.fill-2 {
+  animation: charge2 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol2 5s ease-in infinite;
 }
 
+@keyframes charge2 {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(3.25);
+  }
+}
+@keyframes changeCol2 {
+  0%, 10% {
+    fill: #f97e2b;
+  }
+  10%, 100% {
+    fill: #217A5C;
+  }
+}
+/* barco 3 */
+.fill-3 {
+  animation: charge3 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol3 5s ease-in infinite;
+}
+
+@keyframes charge3 {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(2);
+  }
+}
+@keyframes changeCol3 {
+  0%, 10% {
+    fill: #f97e2b;
+  }
+  10%, 100% {
+    fill: #217A5C;
+  }
+}
 /* boton cards barcos */
 .css-button-arrow--green {
   min-width: 130px;
@@ -805,7 +797,7 @@ nav {
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
-  left: 30px;
+  right: 20px;
   display: inline-block;
   outline: none;
   overflow: hidden;
