--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,9 @@
   }
 
   /* CARDS */
-  .card-container {
+  .card-productos {
     background-color: white;
-    padding: 10px 100px !important;
+    padding: 10px 0px !important;
   }
 
   .card {
@@ -160,6 +160,20 @@
   .imagen-productos {
     border-bottom-left-radius: 30px;
     border-top-right-radius: 30px !important;
+  }
+
+  .seccion-barcos {
+    padding: 100px 0px !important;
+  }
+
+  .img-svg {
+    position: relative !important;
+    right: 12% !important;
+  }
+
+  .card-barcos {
+    filter: drop-shadow(0 0 0.5rem black);
+    margin-top: 15px !important;
   }
 
   /* ABOUT US */
@@ -373,6 +387,11 @@
     text-align: center !important;
   }
 
+  .btn-compra {
+    position: relative !important;
+    left: 29% !important;
+  }
+
   .imagen-container {
     position: relative !important;
     display: inline-block !important;
@@ -382,6 +401,12 @@
   .imagen-productos {
     border-bottom-left-radius: 30px;
     border-top-right-radius: 30px !important;
+  }
+
+  /* progress bar */
+  .img-svg {
+    position: relative;
+    right: 3.5% !important;
   }
 
   /* ABOUT US */
@@ -687,7 +712,7 @@ nav {
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  padding: 100px 150px;
+  padding: 100px 180px;
 }
 
 .card-barcos {
@@ -705,7 +730,7 @@ nav {
 .parrafo-barcos {
   display: flex;
   justify-content: center !important;
-  font-size: 25px;
+  font-size: 22px;
   font-family: "Titillium Web", sans-serif;
   color: #ffbb33;
 }
@@ -726,7 +751,7 @@ nav {
 
 /* barco 1 */
 .fill-1 {
-  animation: charge 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol 5s ease-in infinite;
+  animation: charge 5s cubic-bezier(0.17, 0.67, 0.54, 0.99), changeCol 5s ease-in;
 }
 
 @keyframes charge {
@@ -738,16 +763,25 @@ nav {
   }
 }
 @keyframes changeCol {
-  0%, 10% {
+  0%, 0% {
+    fill: #f92b2b;
+  }
+  25% {
     fill: #f97e2b;
   }
-  10%, 100% {
+  50% {
+    fill: #f9eb2b;
+  }
+  75% {
+    fill: #5b7a21;
+  }
+  100% {
     fill: #217A5C;
   }
 }
 /* barco 2 */
 .fill-2 {
-  animation: charge2 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol2 5s ease-in infinite;
+  animation: charge2 5s cubic-bezier(0.17, 0.67, 0.54, 0.99), changeCol2 5s ease-in;
 }
 
 @keyframes charge2 {
@@ -755,20 +789,23 @@ nav {
     transform: scaleX(0);
   }
   100% {
-    transform: scaleX(3.25);
+    transform: scaleX(3.5);
   }
 }
 @keyframes changeCol2 {
-  0%, 10% {
+  0%, 0% {
+    fill: #f92b2b;
+  }
+  50% {
     fill: #f97e2b;
   }
-  10%, 100% {
-    fill: #217A5C;
+  100% {
+    fill: #f9eb2b;
   }
 }
 /* barco 3 */
 .fill-3 {
-  animation: charge3 5s cubic-bezier(0.17, 0.67, 0.54, 0.99) infinite, changeCol3 5s ease-in infinite;
+  animation: charge3 5s cubic-bezier(0.17, 0.67, 0.54, 0.99), changeCol3 5s ease-in;
 }
 
 @keyframes charge3 {
@@ -776,15 +813,15 @@ nav {
     transform: scaleX(0);
   }
   100% {
-    transform: scaleX(2);
+    transform: scaleX(1.5);
   }
 }
 @keyframes changeCol3 {
-  0%, 10% {
-    fill: #f97e2b;
+  0%, 50% {
+    fill: #f92b2b;
   }
-  10%, 100% {
-    fill: #217A5C;
+  100% {
+    fill: #f97e2b;
   }
 }
 /* boton cards barcos */
